lab-guide-app/lab-guide-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: lab-guide
  namespace: lab-guide
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: lab-guide
