lab-guide-app/lab-guide-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: doc
  namespace: lab-guide
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: lab-guide
